<resources>
    <string name="app_name">MyApp</string>
    <string name="description">apps logo</string>
    <string name="mail">Email</string>
    <string name="pwd">Password</string>
    <string name="fullName">Full Name</string>
    <string name="Phone">Phone Number</string>
    <string name="Numbat">Nom battiment et numero dappartement </string>
    <string name="welcome">WELCOME</string>
    <string name="mapspot">mapspot</string>
    <string name="text">desc</string>


</resources>