<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/shape"
    tools:context=".EspaceClientActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Authentification App"
        android:textColor="@color/primaryColor"
        android:textSize="35sp"
        android:textStyle="bold"
        android:paddingBottom="24dp"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryLightColor"
        android:hint="@string/fullName"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryLightColor"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryLightColor"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryLightColor"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Numbat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryLightColor"
        android:hint="@string/Numbat"
        android:inputType="text"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryColor"
        android:padding="12dp"
        android:text="Sign Up"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondaryColor"
        android:padding="12dp"
        android:text="Login Here"
        android:textSize="18sp"
        android:textColor="@color/white" />
</LinearLayout>
